--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -287,6 +287,41 @@
         height: auto;
         border-radius: 5px;
       }
+
+      .settings-popup {
+    position: fixed;
+    bottom: 60px;
+    right: 15px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    padding: 10px 15px;
+    display: none;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.settings-popup.show {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.settings-popup button {
+    border: none;
+    background-color: #e74c3c;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.settings-popup button:hover {
+    background-color: #c0392b;
+}
+      
     </style>
   </head>
   <body>
@@ -361,14 +396,26 @@
           <i class="fas fa-users"></i>
           <p>Customers</p>
         </div>
-        <div>
+        <div id="settingsButton">
           <i class="fas fa-cog"></i>
           <p>Settings</p>
         </div>
       </div>
     </div>
+    <div class="settings-popup" id="settingsPopup">
+    <button id="logoutButton">Logout</button>
+    </div>
 
     <script>
+
+      document.getElementById("settingsButton").addEventListener("click", function () {
+    document.getElementById("settingsPopup").classList.toggle("show");
+});
+
+document.getElementById("logoutButton").addEventListener("click", function () {
+    localStorage.clear();
+    window.location.href = "index.html";
+});
       document.addEventListener("DOMContentLoaded", async function () {
         try {
           // Get phone number from localStorage (saved during OTP verification)
