--- a/public/my_stock.html
+++ b/public/my_stock.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
     />
+    <script
+      src="https://kit.fontawesome.com/5274d0405c.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
       :root {
         --gradient-start: #006d87;
@@ -38,6 +42,9 @@
 
       .header {
         padding: 1rem;
+        /* margin-top: 15px; */
+        padding-top: 30px;
+        /* height: 90px; */
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -137,7 +144,15 @@
         padding: 1rem;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         gap: 1rem;
+        cursor: pointer;
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+
+      .inventory-item:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
 
       .item-image {
@@ -173,11 +188,61 @@
         border: none;
         cursor: pointer;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        transition: transform 0.2s, background-color 0.2s;
+      }
+
+      .fab:hover {
+        transform: scale(1.05);
+        background: #2a3952;
+      }
+
+      .error-message {
+        text-align: center;
+        padding: 2rem;
+        color: var(--text-gray);
+        background: rgba(255, 255, 255, 0.9);
+        border-radius: 8px;
+        margin: 1rem;
+      }
+
+      .delete-btn {
+        background: white;
+        color: white;
+        border: none;
+        padding: 8px 12px;
+        border-radius: 6px;
+        cursor: pointer;
+        transition: background 0.2s;
       }
 
       @media (min-width: 768px) {
         .inventory-list {
           grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        }
+      }
+
+      .loading-spinner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+      }
+
+      .spinner {
+        width: 40px;
+        height: 40px;
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid var(--gradient-start);
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
         }
       }
     </style>
@@ -190,38 +255,72 @@
       >
         ←
       </button>
-      <h1 class="title">My Inventory/ स्टॉक जानकारी</h1>
+      <h1 class="title">My Inventory / स्टॉक जानकारी</h1>
       <button class="menu-button">⋮</button>
     </header>
 
     <nav class="tabs">
       <a href="#all" class="tab active"
-        >All Stocks <span class="tab-count" id="allCount">0</span></a
+        >All Stocks <span class="tab-count">0</span></a
       >
-      <!-- <a href="#low" class="tab">Low Stock <span class="tab-count" id="lowCount">0</span></a>
-    <a href="#archived" class="tab">Archived</a> -->
     </nav>
 
     <div class="search-container">
       <div class="search-bar">
-        <input type="text" placeholder="Search" id="searchInput" />
+        <input type="text" placeholder="Search products..." id="searchInput" />
       </div>
     </div>
 
     <div class="inventory-list" id="inventoryList">
-      <!-- Products will be dynamically inserted here -->
+      <div class="loading-spinner">
+        <div class="spinner"></div>
+      </div>
     </div>
 
-    <button class="fab" onclick="window.location.href='add-product.html'">+</button>
+    <button class="fab" onclick="window.location.href='add-product.html'">
+      +
+    </button>
 
     <script>
-      // Function to get user's shop ID from localStorage or another source
+      async function editProduct(productId) {
+        if (!productId) {
+          console.error("No product ID provided");
+          return;
+        }
+
+        try {
+          const response = await fetch(
+            `/products/single/${productId}`
+          );
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+
+          const data = await response.json();
+          if (!data.success) {
+            throw new Error(data.message || "Failed to fetch product");
+          }
+
+          // Save product data to localStorage for editing
+          localStorage.setItem("editProductId", productId);
+          localStorage.setItem("editProductData", JSON.stringify(data.product));
+
+          // Redirect to add-product.html
+          window.location.href = "add-product.html";
+        } catch (error) {
+          console.error("Error fetching product details:", error);
+          alert("Failed to load product details. Please try again.");
+        }
+      }
       function getShopId() {
-        // Replace this with your actual method of storing/retrieving the shop ID
-        return localStorage.getItem("shopId");
+        const shopId = localStorage.getItem("shopId");
+        if (!shopId) {
+          console.warn("Shop ID not found in localStorage");
+          return null;
+        }
+        return shopId;
       }
 
-      // Function to fetch products
       async function fetchProducts() {
         try {
           const shopId = getShopId();
@@ -229,136 +328,176 @@
             throw new Error("Shop ID not found");
           }
 
-          const response = await fetch(`/products/${shopId}`);
-          const data = await response.json();
-
-          if (!data.success) {
-            throw new Error(data.message);
+          const response = await fetch(
+            `/products/shop/${shopId}`
+          );
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
           }
 
-          return data.products;
+          const data = await response.json();
+          if (!data.success) {
+            throw new Error(data.message || "Failed to fetch products");
+          }
+
+          return data.products || [];
         } catch (error) {
           console.error("Error fetching products:", error);
-          return [];
+          throw error; // Propagate error for handling in UI
         }
       }
 
-      // Function to render products
-      // function renderProducts(products) {
-      //     const inventoryList = document.getElementById('inventoryList');
-      //     inventoryList.innerHTML = '';
-
-      //     let allCount = 0;
-      //     let lowCount = 0;
-
-      //     products.forEach((product, index) => {
-      //         allCount++;
-      //         if (product.quantity <= 5) lowCount++; // Assuming 5 is the low stock threshold
-
-      //         const itemHtml = `
-      //             <div class="inventory-item">
-      //                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYaoYfMAG3k2mzseNmXZIswXGwEyiZVk0eoQ&s" alt="${product.name}" class="item-image">
-      //                 <div class="item-details">
-      //                     <h3>(${index + 1}) ${product.name}</h3>
-      //                     <p>MRP: Rs. ${product.mrp} Quantity: ${product.quantity} ${product.unit}</p>
-      //                 </div>
-      //             </div>
-      //         `;
-      //         inventoryList.innerHTML += itemHtml;
-      //     });
-
-      //     // Update counts
-      //     document.getElementById('allCount').textContent = allCount;
-      //     // document.getElementById('lowCount').textContent = lowCount;
-      // }
-
-      // First, modify the product rendering function in my_stock.html to make items clickable:
       function renderProducts(products) {
         const inventoryList = document.getElementById("inventoryList");
-        inventoryList.innerHTML = "";
+        const allCountElement = document.querySelector(".tab-count");
 
-        let allCount = 0;
-        let lowCount = 0;
+        if (!inventoryList || !allCountElement) {
+          console.error("Required DOM elements not found");
+          return;
+        }
+
+        if (!Array.isArray(products)) {
+          console.error("Products is not an array:", products);
+          inventoryList.innerHTML = `
+      <div class="error-message">
+        Unable to load products. Please try again later.
+      </div>
+    `;
+          return;
+        }
+
+        if (products.length === 0) {
+          inventoryList.innerHTML = `
+      <div class="error-message">
+        No products found. Click the + button to add your first product.
+      </div>
+    `;
+          allCountElement.textContent = "0";
+          return;
+        }
+
+        inventoryList.innerHTML = "";
+        allCountElement.textContent = products.length;
 
         products.forEach((product, index) => {
-          allCount++;
-          if (product.quantity <= 5) lowCount++;
+          if (!product) return;
 
-          const itemHtml = `
-            <div class="inventory-item" onclick="editProduct('${product._id}')">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYaoYfMAG3k2mzseNmXZIswXGwEyiZVk0eoQ&s" alt="${
-                  product.name
-                }" class="item-image">
-                <div class="item-details">
-                    <h3>(${index + 1}) ${product.name}</h3>
-                    <p>MRP: Rs. ${product.mrp} Quantity: ${product.quantity} ${
-            product.unit
+          const itemHtml = document.createElement("div");
+          itemHtml.classList.add("inventory-item");
+          itemHtml.id = `product-${product._id}`;
+          itemHtml.onclick = () => editProduct(product._id); // Attach click event to the product box
+
+          itemHtml.innerHTML = `
+      <img
+        src="${
+          product.imageUrl ||
+          "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYaoYfMAG3k2mzseNmXZIswXGwEyiZVk0eoQ&s"
+        }"
+        alt="${product.name || "Product"}"
+        class="item-image"
+        onerror="this.src='https://via.placeholder.com/60'"
+      >
+      <div class="item-details">
+        <h3>(${index + 1}) ${product.name || "Unnamed Product"}</h3>
+        <p>MRP: ₹${product.mrp || 0} | Qty: ${product.quantity || 0} ${
+            product.unit || "units"
           }</p>
-                </div>
-            </div>
-        `;
-          inventoryList.innerHTML += itemHtml;
+        <p>Retail: ₹${product.retailPrice || 0} | Wholesale: ₹${
+            product.wholesalePrice || 0
+          }</p>
+      </div>
+      <button class="delete-btn" onclick="event.stopPropagation(); deleteProduct('${
+        product._id
+      }')">
+        <i class="fa-solid fa-trash-can" style="color: #ff0026; font-size:16px;"></i>
+      </button>
+    `;
+
+          inventoryList.appendChild(itemHtml);
         });
-
-        document.getElementById("allCount").textContent = allCount;
-        document.getElementById("lowCount").textContent = lowCount;
       }
 
-      // Add the editProduct function to handle clicks:
-      function editProduct(productId) {
-        // Store the product ID for retrieval on the edit page
-        localStorage.setItem("editProductId", productId);
-        window.location.href = "add-product.html";
+      async function deleteProduct(productId) {
+        if (!productId) {
+          alert("Error: Product ID is missing.");
+          return;
+        }
+
+        if (!confirm("Are you sure you want to delete this product?")) return;
+
+        try {
+          const response = await fetch(
+            `/products/${productId}`,
+            {
+              method: "DELETE",
+              headers: { "Content-Type": "application/json" },
+            }
+          );
+
+          const data = await response.json();
+
+          if (data.success) {
+            document.getElementById(`product-${productId}`).remove();
+            alert("Product deleted successfully!");
+          } else {
+            alert("Failed to delete product: " + data.message);
+          }
+        } catch (error) {
+          console.error("Error deleting product:", error);
+          alert("Failed to delete product. Try again later.");
+        }
       }
 
-      // Function to filter products
       function filterProducts(products, searchTerm) {
-        return products.filter(
-          (product) =>
-            product.name.toLowerCase().includes(searchTerm.toLowerCase()) ||
-            product.barcode?.toLowerCase().includes(searchTerm.toLowerCase())
-        );
+        if (!Array.isArray(products) || typeof searchTerm !== "string") {
+          return [];
+        }
+
+        searchTerm = searchTerm.toLowerCase().trim();
+        if (!searchTerm) return products;
+
+        return products.filter((product) => {
+          if (!product) return false;
+
+          return (
+            product.name?.toLowerCase().includes(searchTerm) ||
+            product.barcode?.toLowerCase().includes(searchTerm) ||
+            product.unit?.toLowerCase().includes(searchTerm)
+          );
+        });
       }
 
-      // Initialize page
       let allProducts = [];
+      let debounceTimeout;
 
       async function initializePage() {
-        allProducts = await fetchProducts();
-        renderProducts(allProducts);
+        try {
+          allProducts = await fetchProducts();
+          renderProducts(allProducts);
 
-        // Search functionality
-        const searchInput = document.getElementById("searchInput");
-        searchInput.addEventListener("input", (e) => {
-          const filtered = filterProducts(allProducts, e.target.value);
-          renderProducts(filtered);
-        });
-
-        // Tab switching functionality
-        const tabs = document.querySelectorAll(".tab");
-        tabs.forEach((tab) => {
-          tab.addEventListener("click", (e) => {
-            e.preventDefault();
-            tabs.forEach((t) => t.classList.remove("active"));
-            tab.classList.add("active");
-
-            const tabId = tab.getAttribute("href").substring(1);
-            let filteredProducts = allProducts;
-
-            if (tabId === "low") {
-              filteredProducts = allProducts.filter(
-                (product) => product.quantity <= 5
-              );
-            } else if (tabId === "archived") {
-              filteredProducts = []; // Implement archived products logic if needed
-            }
-
-            renderProducts(filteredProducts);
-          });
-        });
+          const searchInput = document.getElementById("searchInput");
+          if (searchInput) {
+            searchInput.addEventListener("input", (e) => {
+              clearTimeout(debounceTimeout);
+              debounceTimeout = setTimeout(() => {
+                const filtered = filterProducts(allProducts, e.target.value);
+                renderProducts(filtered);
+              }, 300);
+            });
+          }
+        } catch (error) {
+          console.error("Error initializing page:", error);
+          const inventoryList = document.getElementById("inventoryList");
+          if (inventoryList) {
+            inventoryList.innerHTML = `
+                  <div class="error-message">
+                    Unable to load products. Please check your connection and try again.
+                  </div>
+                `;
+          }
+        }
       }
 
-      // Start the application
       document.addEventListener("DOMContentLoaded", initializePage);
     </script>
   </body>
