--- a/public/payment.html
+++ b/public/payment.html
@@ -363,7 +363,7 @@
           </button>
         </div>
 
-        <button class="btn home-btn">Go to Homepage</button>
+        <button class="btn home-btn" onclick="window.location.href='dashboard.html'">Go to Homepage</button>
       </div>
 
       <!-- UPI Setup Page -->
