--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -201,6 +201,9 @@
       .fa-users:before {
         color: white;
       }
+      .fa-globe:before {
+        color: white;
+      }
       .fa-cog:before {
         color: white;
       }
@@ -230,12 +233,13 @@
       }
 
       .footer i {
-        font-size: 1.7rem;
+        font-size: 1.3rem;
         color: #1a73e8;
       }
 
       .footer p {
         margin: 0.35rem 0 0;
+        font-size: 0.8rem;
       }
 
       @media (max-width: 400px) {
@@ -395,6 +399,10 @@
         <div>
           <i class="fas fa-users"></i>
           <p>Customers</p>
+        </div>
+        <div>
+          <i class="fas fa-globe"></i>
+          <p>Online Shop</p>
         </div>
         <div id="settingsButton">
           <i class="fas fa-cog"></i>
