--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -400,9 +400,9 @@
           <i class="fas fa-users"></i>
           <p>Customers</p>
         </div>
-        <div>
+        <div onclick="window.location.href='OnlineStore.html'">
           <i class="fas fa-globe"></i>
-          <p>Online Shop</p>
+          <p>Online Store</p>
         </div>
         <div id="settingsButton">
           <i class="fas fa-cog"></i>
