--- a/public/ActualStore.html
+++ b/public/ActualStore.html
@@ -374,7 +374,7 @@
     <div class="banner">
       <!-- <span class="discount-badge">40% off</span> -->
 
-      <img src="bannerbg.jpg" />
+      <img src="https://st5.depositphotos.com/7341970/65490/v/450/depositphotos_654907472-stock-illustration-online-grocery-shopping-app-smartphone.jpg" />
     </div>
 
     <section class="category-section">
