--- a/public/ActualStore.html
+++ b/public/ActualStore.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      rel="stylesheet"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Anta&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kdam+Thmor+Pro&family=Lexend:wght@100..900&family=Montserrat+Subrayada:wght@400;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
     </style>
@@ -36,7 +40,7 @@
       }
 
       .header {
-        background-color: var(--primary-color);
+        background-color: #1b45d4;
         padding: 30px;
       }
 
@@ -49,9 +53,12 @@
       }
 
       .header-top img {
-        width: 120px; /* Fixed width */
-        height: auto; /* Adjust height proportionally */
-        max-height: 130px; /* Ensures it does not exceed the set height */
+        width: 120px;
+        /* Fixed width */
+        height: auto;
+        /* Adjust height proportionally */
+        max-height: 130px;
+        /* Ensures it does not exceed the set height */
         display: block;
       }
 
@@ -59,30 +66,31 @@
         font-size: 24px;
         font-weight: 700;
         font-family: "Lexend";
-        color: #000;
+        color: whitesmoke;
         margin-top: 8px;
       }
+
       #slogan {
         margin-top: 8px;
       }
 
-      .cart-icon {
-        background: #000;
-        color: white;
-        width: 32px;
-        height: 32px;
+      /* .cart-icon {
+        background: white;
+        color: black;
+        width: 38px;
+        height: 38px;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
         cursor: pointer;
-      }
+      } */
 
       .location {
         display: flex;
         align-items: center;
         gap: 8px;
-        color: #000;
+        color: white;
         margin-bottom: 12px;
         cursor: pointer;
         padding: 8px;
@@ -124,7 +132,8 @@
 
       .banner {
         border-radius: 12px;
-        margin: 16px auto; /* Centers the banner */
+        margin: 16px auto;
+        /* Centers the banner */
         position: relative;
         overflow: hidden;
         height: 200px;
@@ -137,7 +146,8 @@
       .banner img {
         width: 100%;
         height: 100%;
-        object-fit: cover; /* Ensures the image fills the banner */
+        object-fit: cover;
+        /* Ensures the image fills the banner */
         border-radius: 12px;
       }
 
@@ -190,9 +200,9 @@
       }
 
       .category-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
       }
 
       .category-card {
@@ -333,12 +343,106 @@
         0% {
           transform: rotate(0deg);
         }
+
         100% {
           transform: rotate(360deg);
         }
       }
+
+      /* Add new styles for the cart icon and product cards */
+      .cart-icon {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        background: #1b45d4;
+        color: black;
+        width: 35px;
+        height: 35px;
+        border: 1px solid white;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+      }
+
+      .cart-count {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        background: red;
+        color: white;
+        font-size: 12px;
+        width: 18px;
+        height: 18px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .product-card {
+        background: white;
+        border-radius: 8px;
+        padding: 12px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: transform 0.3s;
+      }
+
+      .product-card:hover {
+        transform: translateY(-2px);
+      }
+
+      .product-card img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        margin-bottom: 8px;
+        border-radius: 8px;
+      }
+
+      .product-card h3 {
+        font-size: 16px;
+        color: #333;
+        flex: 1;
+
+        /* Space between name and price */
+      }
+
+      .product-card .price {
+        color: #4caf50;
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      .add-to-cart-btn {
+        background: #1b45d4;
+        border: none;
+        padding: 6px 12px;
+        border-radius: 6px;
+        color: white;
+        font-weight: 600;
+        cursor: pointer;
+      }
+
+      .add-to-cart-btn:hover {
+        background: #1632a1;
+      }
+
+      .price {
+        color: #4caf50;
+        font-weight: 600;
+        font-size: 14px;
+        margin-bottom: 10px;
+        /* Adds space between the price and the "Add" button */
+      }
     </style>
   </head>
+
   <body>
     <div class="location-prompt">
       <div class="location-prompt-content">
@@ -358,56 +462,36 @@
       <div class="header-top">
         <img src="whitelogo.png" class="watermark" />
         <h1 class="store-name" id="storeName"></h1>
-
-        <!-- <div class="cart-icon">🛒</div> -->
+        <div class="cart-icon" onclick="openCart()">
+          <i class="fas fa-shopping-cart" style="color: white"></i>
+          <div class="cart-count" id="cartCount">0</div>
+        </div>
       </div>
       <div class="location" id="locationText" onclick="requestLocation()">
         📍 <span id="addressText">Add Your Address</span>
       </div>
       <div class="search-container">
         <span class="search-icon">🔍</span>
-        <input type="text" class="search-input" placeholder="Search Products" />
-        <!-- <span class="filter-icon">⚏</span> -->
+        <input
+          type="text"
+          class="search-input"
+          placeholder="Search Products"
+          onkeyup="searchProducts()"
+          id="searchBox"
+        />
       </div>
     </header>
-    <!-- <p id="slogan">From Our Store to Your Door!</p> -->
-    <div class="banner">
-      <!-- <span class="discount-badge">40% off</span> -->
 
-      <img src="https://st5.depositphotos.com/7341970/65490/v/450/depositphotos_654907472-stock-illustration-online-grocery-shopping-app-smartphone.jpg" />
+    <div class="banner">
+      <img src="bannerbg.jpg" />
     </div>
 
     <section class="category-section">
       <div class="category-header">
-        <h2 class="category-title">Products Avaliable</h2>
-        <!-- <span class="category-count">(10 Category)</span> -->
+        <h2 class="category-title">Products Available</h2>
       </div>
-      <div class="category-grid">
-        <div class="category-card">
-          <img src="/api/placeholder/80/80" alt="Vegetables & Fruits" />
-          <h3>Vegetables & Fruits</h3>
-          <span class="discount">MIN 25% OFF</span>
-        </div>
-        <div class="category-card">
-          <img src="/api/placeholder/80/80" alt="Foodgrains" />
-          <h3>Foodgrains, Oil & Masala</h3>
-          <span class="discount">UP TO 30% OFF</span>
-        </div>
-        <div class="category-card">
-          <img src="/api/placeholder/80/80" alt="Meat" />
-          <h3>Eggs, Meat & Fish</h3>
-          <span class="discount">MIN 15% OFF</span>
-        </div>
-        <div class="category-card">
-          <img src="/api/placeholder/80/80" alt="Kitchen" />
-          <h3>Kitchen, Garden & Pets</h3>
-          <span class="discount">UP TO 20% OFF</span>
-        </div>
-        <div class="category-card">
-          <img src="/api/placeholder/80/80" alt="Cleaning" />
-          <h3>Cleaning & Household</h3>
-          <span class="discount">MIN 10% OFF</span>
-        </div>
+      <div class="category-grid" id="productGrid">
+        <!-- Products will be dynamically inserted here -->
       </div>
     </section>
 
@@ -435,23 +519,29 @@
     </nav>
 
     <script>
+      function searchProducts() {
+        const searchTerm = document
+          .getElementById("searchBox")
+          .value.toLowerCase();
+        const filteredProducts = products.filter((product) =>
+          product.name.toLowerCase().includes(searchTerm)
+        );
+
+        displayProducts(filteredProducts); // Show filtered products
+      }
+
       // Initialize local storage and check for stored data
       function initializeLocalStorage() {
-        // Set default store name if not exists
         if (!localStorage.getItem("storeName")) {
           localStorage.setItem("storeName", "Grocery");
         }
-
-        // Update store name from local storage
         document.getElementById("storeName").textContent =
           localStorage.getItem("shopname");
 
-        // Check for stored address
         const storedAddress = localStorage.getItem("userAddress");
         if (storedAddress) {
           document.getElementById("addressText").textContent = storedAddress;
         } else {
-          // Show location prompt if no address is stored
           document.querySelector(".location-prompt").style.display = "flex";
         }
       }
@@ -471,7 +561,6 @@
 
             const { latitude, longitude } = position.coords;
 
-            // Using OpenStreetMap Nominatim API for reverse geocoding
             const response = await fetch(
               `https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`
             );
@@ -481,17 +570,13 @@
             }
 
             const data = await response.json();
-
-            // Format the address to be more concise
             const addressParts = data.display_name.split(",");
             const formattedAddress = addressParts.slice(0, 3).join(",").trim();
 
-            // Store and display the address
             localStorage.setItem("userAddress", formattedAddress);
             document.getElementById("addressText").textContent =
               formattedAddress;
 
-            // Hide the prompt
             promptElement.style.display = "none";
           } catch (error) {
             console.error("Error:", error);
@@ -522,6 +607,119 @@
       // Add click event for location text to re-trigger location prompt
       document.getElementById("locationText").addEventListener("click", () => {
         document.querySelector(".location-prompt").style.display = "flex";
+      });
+
+      let products = []; // ✅ Declare globally
+
+      async function fetchProducts() {
+        try {
+          const shopId = localStorage.getItem("shopId");
+          if (!shopId) {
+            throw new Error("Shop ID not found in localStorage");
+          }
+
+          const response = await fetch(
+            `/products/shop/${shopId}`
+          );
+
+          if (!response.ok) {
+            throw new Error(
+              `Failed to fetch products, Status: ${response.status}`
+            );
+          }
+
+          const data = await response.json();
+          console.log("API Response:", data);
+
+          // ✅ Store products in the global variable
+          products = data.products;
+
+          if (!Array.isArray(products)) {
+            throw new Error("Expected an array but received something else");
+          }
+
+          displayProducts(products); // ✅ Pass the array to display function
+        } catch (error) {
+          console.error("Error fetching products:", error);
+        }
+      }
+
+      // Display products in the grid
+      function displayProducts(products) {
+        const productGrid = document.getElementById("productGrid");
+        productGrid.innerHTML = ""; // Clear existing content
+
+        products.forEach((product) => {
+          const productCard = document.createElement("div");
+          productCard.className = "product-card";
+
+          productCard.innerHTML = `
+    <div>   
+    <h3>${product.name}</h3>
+    <p class="price">₹${product.retailPrice}</p> 
+    </div>
+    <button class="add-to-cart-btn" onclick="addToCart('${product._id}')">Add</button>
+`;
+
+          productGrid.appendChild(productCard);
+        });
+      }
+
+      // Cart functionality
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+      function addToCart(productId) {
+        const product = products.find((p) => p._id === productId);
+        if (product) {
+          // Check if product already exists in cart
+          const existingItem = cart.find((item) => item._id === productId);
+          if (existingItem) {
+            existingItem.quantity = (existingItem.quantity || 1) + 1;
+          } else {
+            product.quantity = 1;
+            cart.push(product);
+          }
+          localStorage.setItem("cart", JSON.stringify(cart));
+          updateCartCount();
+          showNotification("Item added to cart");
+        }
+      }
+      function updateCartCount() {
+        const cartCount = cart.reduce(
+          (total, item) => total + (item.quantity || 1),
+          0
+        );
+        document.getElementById("cartCount").textContent = cartCount;
+      }
+
+      function openCart() {
+        window.location.href = "AddToCart.html";
+      }
+
+      function showNotification(message) {
+        const notification = document.createElement("div");
+        notification.style.cssText = `
+        position: fixed;
+        bottom: 80px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #1b45d4;
+        color: white;
+        padding: 12px 24px;
+        border-radius: 8px;
+        z-index: 1000;
+    `;
+        notification.textContent = message;
+        document.body.appendChild(notification);
+
+        setTimeout(() => {
+          notification.remove();
+        }, 2000);
+      }
+
+      window.addEventListener("load", () => {
+        updateCartCount();
+        fetchProducts();
       });
     </script>
   </body>
