--- a/public/ActualStore.html
+++ b/public/ActualStore.html
@@ -483,7 +483,7 @@
     </header>
 
     <div class="banner">
-      <img src="bannerbg.jpg" />
+      <img src="https://t4.ftcdn.net/jpg/05/89/90/83/360_F_589908398_6RaggcvYGDzFF0Oh2JAcepJHeU6XLJEZ.jpg" />
     </div>
 
     <section class="category-section">
