--- a/public/AddToCart.html
+++ b/public/AddToCart.html
@@ -47,8 +47,16 @@
       }
 
       h1 {
-        font-size: 24px;
-        margin-bottom: 20px;
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+      h2{
+        font-size: 20px;
+        /* margin-bottom: 10px; */
+      }
+
+      .item-details h3{
+        font-size: 18px;
       }
 
       .cart-item {
