--- a/public/ActualStore.html
+++ b/public/ActualStore.html
@@ -441,6 +441,15 @@
         /* Adds space between the price and the "Add" button */
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZX93BPWK1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7ZX93BPWK1');
+</script>
   </head>
 
   <body>
