--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     <title>QuikKirana | Inventory Management & Billing App</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="faviconlogo.png" type="image/icon type" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZX93BPWK1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7ZX93BPWK1');
+</script>
     <style>
       #loader {
         display: none;
