--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -506,7 +506,7 @@
           <i class="fas fa-file-invoice"></i>
           <p>Last Bills</p>
         </div>
-        <div>
+        <div onclick="window.location.href='orders.html'">
           <i class="fas fa-clipboard-list"></i>
           <p>Orders</p>
         </div>
