--- a/public/UserSection/sign-up.html
+++ b/public/UserSection/sign-up.html
@@ -257,7 +257,7 @@
         </div>
 
         <div class="login-link">
-            Already have an account? <a href="signin.html">Login</a>
+            Already have an account? <a href="sign-in.html">Login</a>
         </div>
     </div>
 
