--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -557,7 +557,7 @@
         const phoneNumber = localStorage.getItem("PhoneNumber");
 
         if (storeSettings.isOnline && phoneNumber) {
-          const storeUrl = `https://renderquikkirana.onrender.com/ActualStore.html?phone=${phoneNumber}`;
+          const storeUrl = `https://quikkiranawebapp.vercel.app/ActualStore.html?phone=${phoneNumber}`;
 
           // Update the permanent box content
           permanentBox.innerHTML = `
