--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -453,7 +453,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <img id="storeImage" src="placeholder.jpg" alt="Store Logo" />
+        <img id="storeImage" src="https://static.vecteezy.com/system/resources/previews/036/280/651/non_2x/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-illustration-vector.jpg" alt="Store Logo" />
         <div>
           <h1 id="storeName">Loading...</h1>
           <p>Hello, <span id="userName">User</span> 👋</p>
