--- a/public/OnlineStore.html
+++ b/public/OnlineStore.html
@@ -507,7 +507,7 @@
 
                 // Generate and set URL for urlSection
                 if (sectionId === "urlSection") {
-                  const generatedUrl = `https://quikkiranawebapp.vercel.app/ActualStore.html?phone=${phoneNumber}`;
+                  const generatedUrl = `https://quikkiranaapp.vercel.app/ActualStore.html?phone=${phoneNumber}`;
                   const shopUrlElement = document.getElementById("shopUrl");
 
                   if (shopUrlElement) {
