--- a/public/OnlineStore.html
+++ b/public/OnlineStore.html
@@ -11,15 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
     />
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZX93BPWK1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-7ZX93BPWK1');
-</script>
     <style>
       :root {
         --background-color: #ffffff;
@@ -507,7 +499,7 @@
 
                 // Generate and set URL for urlSection
                 if (sectionId === "urlSection") {
-                  const generatedUrl = `https://quikkiranaapp.vercel.app/ActualStore.html?phone=${phoneNumber}`;
+                  const generatedUrl = `https://renderquikkirana.onrender.com/ActualStore.html?phone=${phoneNumber}`;
                   const shopUrlElement = document.getElementById("shopUrl");
 
                   if (shopUrlElement) {
