--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,6 @@
     <title>QuikKirana | Inventory Management & Billing App</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="faviconlogo.png" type="image/icon type" />
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZX93BPWK1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7ZX93BPWK1');
-</script>
     <style>
       #loader {
         display: none;
@@ -80,6 +71,9 @@
               <span class="dot"></span>
               <span class="dot"></span>
             </div>
+            <p id="signup">
+              Sign up as user? <a href="UserSection/sign-up.html">Click here</a>
+            </p>
             <button id="submitBtn">Submit</button>
             <label id="team">Made with ❤️ by TeamInnov4tors</label>
           </div>
