--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -15,7 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-   
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7ZX93BPWK1"
+    ></script>
     <style>
       * {
         box-sizing: border-box;
@@ -431,7 +434,7 @@
         color: white;
       }
 
-      .usersec{
+      .usersec {
         width: 100%;
         height: auto;
         text-align: center;
@@ -441,7 +444,11 @@
   <body>
     <div class="container">
       <div class="header">
-        <img id="storeImage" src="https://static.vecteezy.com/system/resources/previews/036/280/651/non_2x/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-illustration-vector.jpg" alt="Store Logo" />
+        <img
+          id="storeImage"
+          src="https://static.vecteezy.com/system/resources/previews/036/280/651/non_2x/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-illustration-vector.jpg"
+          alt="Store Logo"
+        />
         <div>
           <h1 id="storeName">Loading...</h1>
           <p>Hello, <span id="userName">User</span> 👋</p>
@@ -482,7 +489,6 @@
         </div>
       </div>
 
-
       <div class="menu">
         <div onclick="window.location.href='my_stock.html'">
           <i class="fas fa-store"></i>
@@ -493,11 +499,11 @@
           <i class="fas fa-exclamation-triangle"></i>
           <p>Low Stocks</p>
         </div>
-        <div>
+        <div onclick="window.location.href='profit_analysis.html'">
           <i class="fas fa-chart-line"></i>
           <p>Profit Analysis</p>
         </div>
-        <div>
+        <div onclick="window.location.href='last_bills.html'">
           <i class="fas fa-file-invoice"></i>
           <p>Last Bills</p>
         </div>
